[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/background_start.png" type="Texture" id=1]
[ext_resource path="res://Assets/fonts/Anton-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Levels/TransScene.gd" type="Script" id=3]
[ext_resource path="res://Assets/hedgehog_pwr_sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/boss2.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
extra_spacing_char = 4
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=2]
resource_name = "hedge_rotate"
length = 0.35
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Hedge:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 4 ]
}

[sub_resource type="Animation" id=5]
resource_name = "idle"
length = 0.7
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.21, 0.33, 0.42, 0.5, 0.66 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18, 19, 20, 21, 22 ]
}

[sub_resource type="Animation" id=3]
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}

[node name="Trans" type="Node2D"]
script = ExtResource( 3 )
lvl = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 525, 288 )
scale = Vector2( 2.5, 2.44 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 792.0
margin_top = 520.0
custom_fonts/normal_font = SubResource( 1 )
text = "NOW ENTERING HEDGELORD SPACE..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hedge" type="Sprite" parent="CanvasLayer"]
position = Vector2( -232, 208 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 4 )
vframes = 3
hframes = 2
frame = 2

[node name="HedgeAnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Hedge"]
autoplay = "hedge_rotate"
anims/hedge_rotate = SubResource( 2 )

[node name="Bog" type="Sprite" parent="CanvasLayer"]
position = Vector2( -240, 216 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 3
hframes = 8
frame = 21

[node name="BogAnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Bog"]
autoplay = "idle"
anims/idle = SubResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fade-in = SubResource( 3 )
anims/fade-out = SubResource( 4 )

[node name="TransTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="TextFadeInTimer" type="Timer" parent="."]
one_shot = true

[node name="TextFadeOutTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
[connection signal="timeout" from="TransTimer" to="." method="_on_TransTimer_timeout"]
[connection signal="timeout" from="TextFadeInTimer" to="." method="_on_TextFadeInTimer_timeout"]
[connection signal="timeout" from="TextFadeOutTimer" to="." method="_on_TextFadeOutTimer_timeout"]
